# koika

./: .gitignore  Makefile  README.md  README.rst  _CoqProject  dune  dune-project  flake.nix  log
coq/: BitTactics.v  BitsToLists.v  CPS.v  CircuitGeneration.v  CircuitOptimization.v  CircuitProperties.v  CircuitSyntax.v  Common.v  CompactLogs.v  Compiler.v  DeriveShow.v  DesugaredSyntax.v  Desugaring.v  Environments.v  EqDec.v  Frontend.v  FullLogs.v.bk  IndTypedSemantics.v  Interop.v  LightEnvironments.v  Logs.v  Maps.v  NormalFormProofs.v  NormalFormTactics.v  Normalize.v  Normalize2.v  NormalizeProofs.v  NormalizeProperties.v  Primitives.v  Sact.v  SimpleForm.v  SimpleFormInterpretation.v  SimpleFormInterpretationb.v  SimpleFormProofs.v  SimpleFormTactics.v  SimpleFormTacticsWrites.v  SimpleFormb.v  SimpleLogs.v  SimpleTypedSemantics.v  SimpleVal.v  (+16 more)
etc/: configure  dune.v.template
examples/: README.md  collatz.v  conflicts.v  conflicts_modular.v  datatypes.v  dune  euclid.v  external_rule.v  fft.v  fir.v  function_call.v  gcd_machine.v  invert.v  loop.v  method_call.v  nothing.v  pipeline.v  pipeline_tutorial.ml  pipeline_tutorial.mli  pipeline_tutorial.v  producer_consumer.ml  producer_consumer.mli  producer_consumer.v  uart.v  vector.v
ocaml/: cuttlec.ml  dune
ocaml/backends/: coq.ml  cpp.ml
ocaml/backends/resources/: Makefile  cuttlesim.hpp  verilator.cpp  verilator.hpp
ocaml/common/: common.ml
ocaml/cuttlebone/: Extraction.v  cuttlebone.ml  dune
ocaml/frontends/: dune
tests/: cross_cycle.v  double_write.v  dune  errors.v  extcall.v  muxelim.v  (+9 more)
(+186 files in other folders)
